# Background_subtraction

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  background_sub.py  environment.yml  pyproject.toml
.github/workflows/: docker-publish.yml  python-publish.yml
backsub/: CLI.py  __init__.py  __main__.py  _version.py  background_sub.py  backsub.py  backsub_test.py  backsub_v3.py  metadata2markers.py  metadata2markers_table.py  new_env.yml  ome_schema.py  ome_writer.py  prototype.py  prototype2.py
example/: markers.csv
scripts/: background_subtraction.py  background_subtraction_v2.py
scripts/old/: background_sub_v034.py  background_subtraction_v3.py  background_subtraction_working_v4.py
